Fix alignment code

--- a/lesson-9-layouts/style_task_2.css
+++ b/lesson-9-layouts/style_task_2.css
@@ -17,9 +17,6 @@ a {
     color: #9e38cd;
     background: #fff;
     text-decoration-line: none;
-}
-
-a {
     padding: 5px 10px;
     border: 1px solid #dfdfdf;
     border-radius: 5px;
